# Genetic-Algorithm

./: .gitignore  CHANGELOG.md  DEMO.md  EXPORT_USAGE.md  FIXES_SUMMARY.md  PARALLEL_EXECUTION.md  PARALLEL_SUMMARY.md  QUICKSTART.md  README.md  SAMPLE_OUTPUT.md  UTILITIES.md  batch_analysis.py  benchmark_functions.py  config.py  export_results.py  ga_algorithm.py  ga_config.py  main_experiment.py  main_menu.py  pyproject.toml  quick_test.py  results_table.py  run_all.py  test_quick.py  utils.py  visualization.py
