[project]
name = "genetic-algorithm-benchmark"
version = "1.0.0"
description = "Genetic Algorithm Benchmark Suite with 15 optimization functions"
authors = [
    {name = "Aryan Kaushik", email = "aryankaushik541@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
